--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3"
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1"
   },
   "author": "Madhav Jha",
   "license": "ISC"
