--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.25"
+    "mongoose": "^5.9.25",
+    "puppeteer": "^5.3.1"
   },
   "author": "Madhav Jha",
   "license": "ISC"
